--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
     </head>
     <body>
-        <header>
-            <img src="./eisenhower-matrix.jpg">
+        <header class="header">
+            <img src="./eisenhower-matrix.jpg" alt="Eisenhower-matrix">
             <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
         </header>
         <div class="main">
@@ -26,7 +26,7 @@
                     <input type="text" class="task">
                     <button class="edit">Edit</button>
                     <button class="delete">
-                        <img src="./remove.svg">
+                        <img src="./remove.svg" alt="Delete">
                     </button>
                 </li>
                 <li class="main__edit">
@@ -35,7 +35,7 @@
                     <input type="text" value="Go Shopping" class="task">
                     <button class="edit">Save</button>
                     <button class="delete">
-                        <img src="./remove.svg">
+                        <img src="./remove.svg" alt="Delete">
                     </button>
                 </li>
             </ul>
@@ -47,7 +47,7 @@
                     <input type="text" class="task">
                     <button class="edit">Edit</button>
                     <button class="delete">
-                        <img src="./remove.svg">
+                        <img src="./remove.svg" alt="Delete">
                     </button>
                 </li>
             </ul>
