--- a/index.html
+++ b/index.html
@@ -11,46 +11,52 @@
             <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
         </header>
         <div class="main">
-            <div>
-                <label for="new-task">Add Item</label>
-                <div class="main__add-task">
-                    <input id="new-task"class="task" type="text">
-                    <button>Add</button>
+            <section class="main__add-item">
+                <div>
+                    <label for="new-task">Add Item</label>
+                    <div class="main__add-task">
+                        <input id="new-task"class="task" type="text">
+                        <button>Add</button>
+                    </div>
                 </div>
-            </div>
-            <h3>Todo</h3>
-            <ul id="main__to-do-list">
-                <li>
-                    <input type="checkbox">
-                    <label class="task">Pay Bills</label>
-                    <input type="text" class="task">
-                    <button class="edit">Edit</button>
-                    <button class="delete">
-                        <img src="./remove.svg" alt="Delete">
-                    </button>
-                </li>
-                <li class="main__edit">
-                    <input type="checkbox">
-                    <label class="task">Go Shopping</label>
-                    <input type="text" value="Go Shopping" class="task">
-                    <button class="edit">Save</button>
-                    <button class="delete">
-                        <img src="./remove.svg" alt="Delete">
-                    </button>
-                </li>
-            </ul>
-            <h3>Completed</h3>
-            <ul id="main__completed">
-                <li>
-                    <input type="checkbox" checked>
-                    <label class="task">See the Doctor</label>
-                    <input type="text" class="task">
-                    <button class="edit">Edit</button>
-                    <button class="delete">
-                        <img src="./remove.svg" alt="Delete">
-                    </button>
-                </li>
-            </ul>
+                <h3>Todo</h3>
+            </section>
+            <section class="to-do">
+                <ul id="main__to-do-list">
+                    <li>
+                        <input type="checkbox">
+                        <label class="task">Pay Bills</label>
+                        <input type="text" class="task">
+                        <button class="edit">Edit</button>
+                        <button class="delete">
+                            <img src="./remove.svg" alt="Delete">
+                        </button>
+                    </li>
+                    <li class="main__edit">
+                        <input type="checkbox">
+                        <label class="task">Go Shopping</label>
+                        <input type="text" value="Go Shopping" class="task">
+                        <button class="edit">Save</button>
+                        <button class="delete">
+                            <img src="./remove.svg" alt="Delete">
+                        </button>
+                    </li>
+                </ul>
+            </section>
+            <section class="main__completed-item">
+                <h3>Completed</h3>
+                <ul id="main__completed">
+                    <li>
+                        <input type="checkbox" checked>
+                        <label class="task">See the Doctor</label>
+                        <input type="text" class="task">
+                        <button class="edit">Edit</button>
+                        <button class="delete">
+                            <img src="./remove.svg" alt="Delete">
+                        </button>
+                    </li>
+                </ul>
+            </section>
         </div>
         <script src="app.js"></script>
     </body>
